Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-68219

Style path through environment variable does not work for locations in resources

XMLWordPrintable

    • 62abe69e45a8958006b7b83cf1de6033be431eeb

      in qquickstyle.cpp:

              const QByteArray value = qgetenv("QT_QUICK_CONTROLS_STYLE_PATH");
              paths += QString::fromLocal8Bit(value).split(QDir::listSeparator(), QString::SkipEmptyParts);
      

      On linux/macOS, this will split on color character which is also used to mark resource paths, so it is impossible on these platforms to point to locations in resources (eg. :/mystyles) though QT_QUICK_CONTROLS_STYLE_PATH environment variable.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            mitch_curtis Mitch Curtis
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes